--- a/dashboards/templates/json/configuration.json
+++ b/dashboards/templates/json/configuration.json
@@ -1,5 +1,128 @@
 {
-	"time":["Jan 2001","Feb 2001","Mar 2001","Apr 2001","May 2001","Jun 2001","Jul 2001","Aug 2001","Sep 2001","Oct 2001","Nov 2001","Dec 2001","Jan 2002","Feb 2002","Mar 2002","Apr 2002","May 2002","Jun 2002","Jul 2002","Aug 2002","Sep 2002","Oct 2002","Nov 2002","Dec 2002","Jan 2003","Feb 2003","Mar 2003","Apr 2003","May 2003","Jun 2003","Jul 2003","Aug 2003","Sep 2003","Oct 2003","Nov 2003","Dec 2003","Jan 2004","Feb 2004","Mar 2004","Apr 2004","May 2004","Jun 2004","Jul 2004","Aug 2004","Sep 2004","Oct 2004","Nov 2004","Dec 2004","Jan 2005","Feb 2005","Mar 2005","Apr 2005","May 2005","Jun 2005","Jul 2005","Aug 2005","Sep 2005","Oct 2005","Nov 2005","Dec 2005","Jan 2006","Feb 2006","Mar 2006","Apr 2006","May 2006","Jun 2006","Jul 2006","Aug 2006","Sep 2006","Oct 2006","Nov 2006","Dec 2006","Jan 2007","Feb 2007","Mar 2007","Apr 2007","May 2007","Jun 2007","Jul 2007","Aug 2007","Sep 2007","Oct 2007","Nov 2007","Dec 2007","Jan 2008","Feb 2008","Mar 2008","Apr 2008","May 2008","Jun 2008","Jul 2008","Aug 2008","Sep 2008","Oct 2008","Nov 2008","Dec 2008","Jan 2009","Feb 2009","Mar 2009","Apr 2009","May 2009","Jun 2009","Jul 2009","Aug 2009","Sep 2009","Oct 2009","Nov 2009","Dec 2009","Jan 2010","Feb 2010","Mar 2010","Apr 2010","May 2010","Jun 2010","Jul 2010","Aug 2010","Sep 2010","Oct 2010","Nov 2010","Dec 2010","Jan 2011","Feb 2011","Mar 2011","Apr 2011","May 2011","Jun 2011","Jul 2011","Aug 2011","Sep 2011","Oct 2011","Nov 2011","Dec 2011","Jan 2012","Feb 2012","Mar 2012","Apr 2012","May 2012","Jun 2012","Jul 2012","Aug 2012","Sep 2012","Oct 2012","Nov 2012","Dec 2012","Jan 2013","Feb 2013","Mar 2013","Apr 2013","May 2013","Jun 2013","Jul 2013","Aug 2013","Sep 2013","Oct 2013","Nov 2013","Dec 2013","Jan 2014","Feb 2014","Mar 2014","Apr 2014","May 2014","Jun 2014","Jul 2014","Aug 2014","Sep 2014","Oct 2014","Nov 2014","Dec 2014"],
+	"evolutionary-scm":{
+		"time": ["Jan 2001","Feb 2001","Mar 2001","Apr 2001","May 2001","Jun 2001","Jul 2001","Aug 2001","Sep 2001","Oct 2001","Nov 2001","Dec 2001","Jan 2002","Feb 2002","Mar 2002","Apr 2002","May 2002","Jun 2002","Jul 2002","Aug 2002","Sep 2002","Oct 2002","Nov 2002","Dec 2002","Jan 2003","Feb 2003","Mar 2003","Apr 2003","May 2003","Jun 2003","Jul 2003","Aug 2003","Sep 2003","Oct 2003","Nov 2003","Dec 2003","Jan 2004","Feb 2004","Mar 2004","Apr 2004","May 2004","Jun 2004","Jul 2004","Aug 2004","Sep 2004","Oct 2004","Nov 2004","Dec 2004","Jan 2005","Feb 2005","Mar 2005","Apr 2005","May 2005","Jun 2005","Jul 2005","Aug 2005","Sep 2005","Oct 2005","Nov 2005","Dec 2005","Jan 2006","Feb 2006","Mar 2006","Apr 2006","May 2006","Jun 2006","Jul 2006","Aug 2006","Sep 2006","Oct 2006","Nov 2006","Dec 2006","Jan 2007","Feb 2007","Mar 2007","Apr 2007","May 2007","Jun 2007","Jul 2007","Aug 2007","Sep 2007","Oct 2007","Nov 2007","Dec 2007","Jan 2008","Feb 2008","Mar 2008","Apr 2008","May 2008","Jun 2008","Jul 2008","Aug 2008","Sep 2008","Oct 2008","Nov 2008","Dec 2008","Jan 2009","Feb 2009","Mar 2009","Apr 2009","May 2009","Jun 2009","Jul 2009","Aug 2009","Sep 2009","Oct 2009","Nov 2009","Dec 2009","Jan 2010","Feb 2010","Mar 2010","Apr 2010","May 2010","Jun 2010","Jul 2010","Aug 2010","Sep 2010","Oct 2010","Nov 2010","Dec 2010","Jan 2011","Feb 2011","Mar 2011","Apr 2011","May 2011","Jun 2011","Jul 2011","Aug 2011","Sep 2011","Oct 2011","Nov 2011","Dec 2011","Jan 2012","Feb 2012","Mar 2012","Apr 2012","May 2012","Jun 2012","Jul 2012","Aug 2012","Sep 2012","Oct 2012","Nov 2012","Dec 2012","Jan 2013","Feb 2013","Mar 2013","Apr 2013","May 2013","Jun 2013","Jul 2013","Aug 2013","Sep 2013","Oct 2013","Nov 2013","Dec 2013","Jan 2014","Feb 2014","Mar 2014","Apr 2014","May 2014","Jun 2014","Jul 2014","Aug 2014","Sep 2014","Oct 2014","Nov 2014","Dec 2014","Jan 2015","Feb 2015","Mar 2015"],
+		"values": [{
+					"nameUser":"added lines",
+					"realName":"added_lines"
+					},{
+					"nameUser":"authors",
+					"realName":"authors"
+					},{
+					"nameUser":"commits",
+					"realName":"commits"
+					},{
+					"nameUser":"committers",
+					"realName":"committers"
+					},{
+					"nameUser":"companies",
+					"realName":"companies"
+					},{
+					"nameUser":"removed lines",
+					"realName":"removed_lines"
+					},{
+					"nameUser":"repositories",
+					"realName":"repositories"
+					}],
+					"state":0,
+					"saveData":{},
+					"reference": "templates/json/scm-evolutionary.json"
+	},
+	"evolutionary-its":{
+		"time": ["Jan 2001","Feb 2001","Mar 2001","Apr 2001","May 2001","Jun 2001","Jul 2001","Aug 2001","Sep 2001","Oct 2001","Nov 2001","Dec 2001","Jan 2002","Feb 2002","Mar 2002","Apr 2002","May 2002","Jun 2002","Jul 2002","Aug 2002","Sep 2002","Oct 2002","Nov 2002","Dec 2002","Jan 2003","Feb 2003","Mar 2003","Apr 2003","May 2003","Jun 2003","Jul 2003","Aug 2003","Sep 2003","Oct 2003","Nov 2003","Dec 2003","Jan 2004","Feb 2004","Mar 2004","Apr 2004","May 2004","Jun 2004","Jul 2004","Aug 2004","Sep 2004","Oct 2004","Nov 2004","Dec 2004","Jan 2005","Feb 2005","Mar 2005","Apr 2005","May 2005","Jun 2005","Jul 2005","Aug 2005","Sep 2005","Oct 2005","Nov 2005","Dec 2005","Jan 2006","Feb 2006","Mar 2006","Apr 2006","May 2006","Jun 2006","Jul 2006","Aug 2006","Sep 2006","Oct 2006","Nov 2006","Dec 2006","Jan 2007","Feb 2007","Mar 2007","Apr 2007","May 2007","Jun 2007","Jul 2007","Aug 2007","Sep 2007","Oct 2007","Nov 2007","Dec 2007","Jan 2008","Feb 2008","Mar 2008","Apr 2008","May 2008","Jun 2008","Jul 2008","Aug 2008","Sep 2008","Oct 2008","Nov 2008","Dec 2008","Jan 2009","Feb 2009","Mar 2009","Apr 2009","May 2009","Jun 2009","Jul 2009","Aug 2009","Sep 2009","Oct 2009","Nov 2009","Dec 2009","Jan 2010","Feb 2010","Mar 2010","Apr 2010","May 2010","Jun 2010","Jul 2010","Aug 2010","Sep 2010","Oct 2010","Nov 2010","Dec 2010","Jan 2011","Feb 2011","Mar 2011","Apr 2011","May 2011","Jun 2011","Jul 2011","Aug 2011","Sep 2011","Oct 2011","Nov 2011","Dec 2011","Jan 2012","Feb 2012","Mar 2012","Apr 2012","May 2012","Jun 2012","Jul 2012","Aug 2012","Sep 2012","Oct 2012","Nov 2012","Dec 2012","Jan 2013","Feb 2013","Mar 2013","Apr 2013","May 2013","Jun 2013","Jul 2013","Aug 2013","Sep 2013","Oct 2013","Nov 2013","Dec 2013","Jan 2014","Feb 2014","Mar 2014","Apr 2014","May 2014","Jun 2014","Jul 2014","Aug 2014","Sep 2014","Oct 2014","Nov 2014","Dec 2014","Jan 2015","Feb 2015","Mar 2015"],
+		"values": [{
+					"nameUser":"bmi tickets",
+					"realName":"bmitickets"
+					},{
+					"nameUser":"changed",
+					"realName":"changed"
+					},{
+					"nameUser":"changers",
+					"realName":"changers"
+					},{
+					"nameUser":"closed",
+					"realName":"closed"
+					},{
+					"nameUser":"closers",
+					"realName":"closers"
+					},{
+					"nameUser":"companies",
+					"realName":"companies"
+					},{
+					"nameUser":"opened",
+					"realName":"opened"
+					},{
+					"nameUser":"openers",
+					"realName":"openers"
+					},{
+					"nameUser":"trackers",
+					"realName":"trackers"
+					}],
+					"state":0,
+					"saveData":{},
+					"reference": "templates/json/its-evolutionary.json"
+	},
+	"evolutionary-mls":{
+		"time": ["Jan 2001","Feb 2001","Mar 2001","Apr 2001","May 2001","Jun 2001","Jul 2001","Aug 2001","Sep 2001","Oct 2001","Nov 2001","Dec 2001","Jan 2002","Feb 2002","Mar 2002","Apr 2002","May 2002","Jun 2002","Jul 2002","Aug 2002","Sep 2002","Oct 2002","Nov 2002","Dec 2002","Jan 2003","Feb 2003","Mar 2003","Apr 2003","May 2003","Jun 2003","Jul 2003","Aug 2003","Sep 2003","Oct 2003","Nov 2003","Dec 2003","Jan 2004","Feb 2004","Mar 2004","Apr 2004","May 2004","Jun 2004","Jul 2004","Aug 2004","Sep 2004","Oct 2004","Nov 2004","Dec 2004","Jan 2005","Feb 2005","Mar 2005","Apr 2005","May 2005","Jun 2005","Jul 2005","Aug 2005","Sep 2005","Oct 2005","Nov 2005","Dec 2005","Jan 2006","Feb 2006","Mar 2006","Apr 2006","May 2006","Jun 2006","Jul 2006","Aug 2006","Sep 2006","Oct 2006","Nov 2006","Dec 2006","Jan 2007","Feb 2007","Mar 2007","Apr 2007","May 2007","Jun 2007","Jul 2007","Aug 2007","Sep 2007","Oct 2007","Nov 2007","Dec 2007","Jan 2008","Feb 2008","Mar 2008","Apr 2008","May 2008","Jun 2008","Jul 2008","Aug 2008","Sep 2008","Oct 2008","Nov 2008","Dec 2008","Jan 2009","Feb 2009","Mar 2009","Apr 2009","May 2009","Jun 2009","Jul 2009","Aug 2009","Sep 2009","Oct 2009","Nov 2009","Dec 2009","Jan 2010","Feb 2010","Mar 2010","Apr 2010","May 2010","Jun 2010","Jul 2010","Aug 2010","Sep 2010","Oct 2010","Nov 2010","Dec 2010","Jan 2011","Feb 2011","Mar 2011","Apr 2011","May 2011","Jun 2011","Jul 2011","Aug 2011","Sep 2011","Oct 2011","Nov 2011","Dec 2011","Jan 2012","Feb 2012","Mar 2012","Apr 2012","May 2012","Jun 2012","Jul 2012","Aug 2012","Sep 2012","Oct 2012","Nov 2012","Dec 2012","Jan 2013","Feb 2013","Mar 2013","Apr 2013","May 2013","Jun 2013","Jul 2013","Aug 2013","Sep 2013","Oct 2013","Nov 2013","Dec 2013","Jan 2014","Feb 2014","Mar 2014","Apr 2014","May 2014","Jun 2014","Jul 2014","Aug 2014","Sep 2014","Oct 2014","Nov 2014","Dec 2014","Jan 2015","Feb 2015","Mar 2015"],
+		"values": [{
+					"nameUser":"companies",
+					"realName":"companies"
+					},{
+					"nameUser":"repositories",
+					"realName":"repositories"
+					},{
+					"nameUser":"senders",
+					"realName":"senders"
+					},{
+					"nameUser":"senders init",
+					"realName":"senders_init"
+					},{
+					"nameUser":"senders response",
+					"realName":"senders_response"
+					},{
+					"nameUser":"sent",
+					"realName":"sent"
+					},{
+					"nameUser":"sent response",
+					"realName":"sent_response"
+					},{
+					"nameUser":"threads",
+					"realName":"threads"
+					}],
+					"state":0,
+					"saveData":{},
+					"reference": "templates/json/mls-evolutionary.json"
+	},
+	"evolutionary-scr":{
+		"time": ["Jan 2001","Feb 2001","Mar 2001","Apr 2001","May 2001","Jun 2001","Jul 2001","Aug 2001","Sep 2001","Oct 2001","Nov 2001","Dec 2001","Jan 2002","Feb 2002","Mar 2002","Apr 2002","May 2002","Jun 2002","Jul 2002","Aug 2002","Sep 2002","Oct 2002","Nov 2002","Dec 2002","Jan 2003","Feb 2003","Mar 2003","Apr 2003","May 2003","Jun 2003","Jul 2003","Aug 2003","Sep 2003","Oct 2003","Nov 2003","Dec 2003","Jan 2004","Feb 2004","Mar 2004","Apr 2004","May 2004","Jun 2004","Jul 2004","Aug 2004","Sep 2004","Oct 2004","Nov 2004","Dec 2004","Jan 2005","Feb 2005","Mar 2005","Apr 2005","May 2005","Jun 2005","Jul 2005","Aug 2005","Sep 2005","Oct 2005","Nov 2005","Dec 2005","Jan 2006","Feb 2006","Mar 2006","Apr 2006","May 2006","Jun 2006","Jul 2006","Aug 2006","Sep 2006","Oct 2006","Nov 2006","Dec 2006","Jan 2007","Feb 2007","Mar 2007","Apr 2007","May 2007","Jun 2007","Jul 2007","Aug 2007","Sep 2007","Oct 2007","Nov 2007","Dec 2007","Jan 2008","Feb 2008","Mar 2008","Apr 2008","May 2008","Jun 2008","Jul 2008","Aug 2008","Sep 2008","Oct 2008","Nov 2008","Dec 2008","Jan 2009","Feb 2009","Mar 2009","Apr 2009","May 2009","Jun 2009","Jul 2009","Aug 2009","Sep 2009","Oct 2009","Nov 2009","Dec 2009","Jan 2010","Feb 2010","Mar 2010","Apr 2010","May 2010","Jun 2010","Jul 2010","Aug 2010","Sep 2010","Oct 2010","Nov 2010","Dec 2010","Jan 2011","Feb 2011","Mar 2011","Apr 2011","May 2011","Jun 2011","Jul 2011","Aug 2011","Sep 2011","Oct 2011","Nov 2011","Dec 2011","Jan 2012","Feb 2012","Mar 2012","Apr 2012","May 2012","Jun 2012","Jul 2012","Aug 2012","Sep 2012","Oct 2012","Nov 2012","Dec 2012","Jan 2013","Feb 2013","Mar 2013","Apr 2013","May 2013","Jun 2013","Jul 2013","Aug 2013","Sep 2013","Oct 2013","Nov 2013","Dec 2013","Jan 2014","Feb 2014","Mar 2014","Apr 2014","May 2014","Jun 2014","Jul 2014","Aug 2014","Sep 2014","Oct 2014","Nov 2014","Dec 2014","Jan 2015","Feb 2015","Mar 2015"],
+		"values": [{
+					"nameUser":"companies",
+					"realName":"companies"
+					},{
+					"nameUser":"repositories",
+					"realName":"repositories"
+					},{
+					"nameUser":"senders",
+					"realName":"senders"
+					},{
+					"nameUser":"senders init",
+					"realName":"senders_init"
+					},{
+					"nameUser":"senders response",
+					"realName":"senders_response"
+					},{
+					"nameUser":"sent",
+					"realName":"sent"
+					},{
+					"nameUser":"sent response",
+					"realName":"sent_response"
+					},{
+					"nameUser":"threads",
+					"realName":"threads"
+					}],
+					"state":0,
+					"saveData":{},
+					"reference": "templates/json/scr-evolutionary.json"
+	},
 	"static-scm":{
 				"values":[{
 					"nameUser":"actions",
@@ -431,7 +554,34 @@
 				"saveData":{},
 				"reference": "templates/json/irc-static.json"
 	},
-	"evolutionary":["added_lines","authors","commits","committers","companies","files","id","month","removed_lines","repositories","unixtime"],
-	"aging":[ "age", "id", "name" ],
-	"birth":[ "age", "id", "name" ]
+	"aging-scm":{
+				"state":0,
+				"saveData":{},
+				"reference": "templates/json/scm-demographics-aging.json"
+	},
+	"birth-scm":{
+				"state":0,
+				"saveData":{},
+				"reference": "templates/json/scm-demographics-birth.json"
+	},
+	"aging-its":{
+				"state":0,
+				"saveData":{},
+				"reference": "templates/json/its-demographics-aging.json"
+	},
+	"birth-its":{
+				"state":0,
+				"saveData":{},
+				"reference": "templates/json/its-demographics-birth.json"
+	},
+	"aging-mls":{
+				"state":0,
+				"saveData":{},
+				"reference": "templates/json/mls-demographics-aging.json"
+	},
+	"birth-mls":{
+				"state":0,
+				"saveData":{},
+				"reference": "templates/json/mls-demographics-birth.json"
+	}
 }
